--- a/html/checkout.html
+++ b/html/checkout.html
@@ -12,10 +12,10 @@
         <a href="#"><img height="50" src="../img/logo.png" class="logo" alt=""></a>
         <div>
             <ul id="navbar">
-                <li><a class="active" href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="men.html">Men</a></li>
                 <li><a href="women.html">Women</a></li>
-                <li><a href="checkout.html">Checkout</a></li>
+                <li><a class="active" href="checkout.html">Checkout</a></li>
                 <li><a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a><span class="cart-items" id="cart-items">0</span></li>
             </ul>
         </div>
@@ -167,7 +167,34 @@
         </form> 
   
     </div> 
-
+    <section class="footer">
+        <div class="col">
+            <div class="logo"><img src="img/logo.png" alt=""></div>
+            <h4>Our Store</h4>
+            <p><span>Address:</span> 123 Street Name, City Name</p>
+            <p><span>Phone:</span> 0123456789</p>
+            <p><span>Hours:</span> 7:00am - 12:00pm, Mon - Sat</p>
+        </div>
+        <div class="follow">
+            <h4>Follow Us</h4>
+            <div class="icon">
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            </div>
+        </div>
+        <div class="about-us">
+            <h4>About Us</h4>
+            <p>Our Store is a store that sells all kinds of products. We have a wide range of products that you can choose from. We have a team of professionals who are always ready to help you with your shopping needs.</p>
+            <div class="about-opt">
+                <a href="about.html">About Us</a>
+                <a href="privacy-policy.html">Privacy Policy</a>
+                <a href="return-policy.html">Return Policy</a>
+                <a href="blog.html">Blog</a>
+            </div>
+        </div>
+    </section>
 
     <script src="../js/data.js"></script>
     <script src="../js/checkout.js"></script>
