--- a/html/men.html
+++ b/html/men.html
@@ -12,8 +12,8 @@
         <a href="#"><img height="50" src="../img/logo.png" class="logo" alt=""></a>
         <div>
             <ul id="navbar">
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="men.html">Men</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a class="active" href="men.html">Men</a></li>
                 <li><a href="women.html">Women</a></li>
                 <li><a href="checkout.html">Checkout</a></li>
                 <li><a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a><span class="cart-items" id="cart-items">0</span></li>
